# php-rust

./: Cargo.toml  LICENSE  README.md  build_and_deploy_example.sh  setup_ext.sh
examples/: print_array.rs  return_array.rs  return_string.rs
src/: function.rs  lib.rs  macros.rs  safe_api.rs  zend.rs
src/safe_api/: array.rs  execute_data.rs  refcounted.rs  string.rs  zval.rs
src/zend/: alloc.rs  api.rs  compile.rs  function.rs  hash.rs  module.rs  portability.rs  string.rs  types.rs  variables.rs
