[package]
name = "php-rust"
version = "0.1.0"
authors = ["XX <freecoder.xx@gmail.com>"]
edition = "2018"

[lib]
name = "php_rust"


[[example]]
name = "return_string"
crate-type = ["cdylib"]

[[example]]
name = "print_array"
crate-type = ["cdylib"]

[[example]]
name = "return_array"
crate-type = ["cdylib"]


[dependencies]
libc = "0.2.53"

[profile.release]
opt-level = 3
lto = true